--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-chrono = "0.4.42"
 clap = { version = "4.3", features = ["derive"] }
+chrono = "0.4.42"
 scopeguard = "1.2.0"
+tempfile = "3.23.0"
+walkdir = "2.5.0"
